kubernetes/Int/deployments/network/gateway/app/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 172.16.2.25
  listeners:
    - name: http
      protocol: HTTP
      port: 80
    - protocol: HTTPS
      port: 443
      name: https-gateway
      hostname: "*.noms.tv"
      tls:
        certificateRefs:
          - kind: Secret
            name: production-tls
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-domain-gateway
      hostname: noms.tv
      tls:
        certificateRefs:
          - kind: Secret
            name: production-tls
      allowedRoutes:
        namespaces:
          from: All
